# azure-iot-sdks

c/iothub_client/devdoc/requirement_docs/: iothubtransportamqp_requirements.md
c/iothub_client/samples/iothub_client_sample_amqp/: iothub_client_sample_amqp.c
c/iothub_client/samples/iothub_client_sample_amqp_shared/: iothub_client_sample_amqp_shared.c
c/iothub_client/samples/iothub_client_sample_http/: iothub_client_sample_http.c
c/iothub_client/samples/iothub_client_sample_mqtt/: iothub_client_sample_mqtt.c
c/iothub_client/samples/iothub_client_sample_x509/: iothub_client_sample_x509.c
c/iothub_client/src/: iothubtransportamqp.c  iothubtransportmqtt.c
c/iothub_client/tests/iothubclient_amqp_e2e/: CMakeLists.txt
c/serializer/tests/serializer_e2e/: CMakeLists.txt  serializer_e2e.cpp
c/testtools/: CMakeLists.txt
c/testtools/X509CertGenerator/: CMakeLists.txt
c/testtools/X509CertGenerator/inc/: generateX509Cert.h
c/testtools/X509CertGenerator/src/: generateX509.c  generateX509Cert.c
doc/get_started/: openwrt-arduino-yun-c.md
